# pyformatic

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yaml  pyformatic.code-workspace  pyproject.toml  requirements-demo.in  requirements-demo.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
.trunk/: trunk.yaml
demo/: elements.yaml  main.py  user_login.yaml  user_signup.yaml
demo/myapp/forms/user_signup/validators/: step_one.py  step_three.py  step_two.py
demo/static/: demo.css
demo/templates/: base.html  done.html  form.html  index.html
demo/templates/pyformatic/ui/: input_text.html
pyformatic/: __init__.py  csrf.py  display.py  elements.py  exceptions.py  flow_runner.py  form.py  formflow.py
pyformatic/static/: pyformatic.css  pyformatic.js
pyformatic/templates/multi_step/: page.html
pyformatic/templates/ui/: button.html  buttons_outer.html  form.html  input.html
tests/: helpers.py  test_csrf.py  test_elements.py  test_flow_runner.py  test_form.py  test_inline_validators.py  test_multistep_e2e.py  test_progress.py  test_validation_messages.py  test_validator_context.py
tests/e2e/: test_home.py  test_signup.py  test_validation.py
